k8s/strapi-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: strapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: strapi
  template:
    metadata:
      labels:
        app: strapi
    spec:
      containers:
        - name: strapi
          image: vk2615/my-strapi:latest
          ports:
            - containerPort: 1337
---
apiVersion: v1
kind: Service
metadata:
  name: strapi-service
spec:
  selector:
    app: strapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 1337
  type: ClusterIP
